test/modules/diten/usemodule/test_nested_use4.good
test_nested_use4.chpl:12: error: Cannot find module 'notoutermost'
